# ebanx-test

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  manager.py  models.py  router.py
tests/: test_routers.py
