[tool.poetry]
name = "ebanx-test"
version = "0.1.0"
description = "Test project for selection process at ebanx to mid-level software engineer"
authors = ["Lucas Torres <lucasldtdionatan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov= "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
